# Rethlas-plus

./: .gitignore  README.md  pyproject.toml
agents/common/: codex_budget.py
agents/generation/: AGENTS.md
agents/verification/: AGENTS.md
cli/: __init__.py  add_node.py  attach_hint.py  init.py  linter.py  main.py  publish.py  rebuild.py  revise_node.py  workspace.py
common/: __init__.py  producers.py  producers.toml
common/config/: __init__.py  loader.py
common/events/: __init__.py  filenames.py  ids.py  io.py  schema.py
common/kb/: __init__.py  hashing.py  interface.py  kuzu_backend.py  types.py
common/runtime/: __init__.py  agents_install.py  codex_runner.py  heartbeat.py  jobs.py  jsonl.py  reaper.py  spawn.py  startup.py
coordinator/: __init__.py  applied_poller.py  children.py  dashboard_child.py  dispatcher.py  events_watcher.py  heartbeat.py  kb_client.py  lock.py  main.py  precheck.py
dashboard/: __init__.py  cli.py  heartbeat.py  kb_client.py  kuzu_reader.py  server.py  state.py  state_watcher.py
docs/: ARCHITECTURE.md  PHASE1.md  PHASE2.md  PHASE2_RETHLAS_PLUS.md  PHASE3_LEARNER_REFEREE.md  PHASE5.md  RETHLAS_PLUS_RESEARCH_NOTES.md  RETHLAS_PLUS_ROADMAP.md  RETHLAS_PLUS_SYSTEM_DESIGN.md  SKILL_AUDIT.md
generator/: __init__.py  cli.py  decoder.py  prompt.py  role.py
librarian/: __init__.py  cli.py  daemon.py  heartbeat.py  ipc.py  projector.py  query_server.py  rebuild.py  renderer.py  validator.py
linter/: __init__.py  checks.py  main.py
tests/: conftest.py
verifier/: __init__.py  cli.py  decoder.py  prompt.py  role.py
(+113 files in other folders)
